--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,6 +34,6 @@
     <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
   </div>
   <div>
-    Don't have an account? <a href="/signup">Register</a>
+    Don't have an account? <a routerLink="/signup">Register</a>
   </div>
 </div>
