--- a/src/app/noticeboard/noticeboard.component.html
+++ b/src/app/noticeboard/noticeboard.component.html
@@ -16,6 +16,6 @@
         <mat-option value="admin">Admin</mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit" [disabled]="noticeForm.invalid">Send</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="noticeForm.invalid" ng-click="sendMessage()">Send</button>
   </form>
 </div>
