--- a/src/app/noticeboard/noticeboard.component.css
+++ b/src/app/noticeboard/noticeboard.component.css
@@ -1,36 +1,93 @@
 .noticeboard-container {
-    padding: 1rem;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 1rem;
+  background-color: #f0f0f0;
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow-y: auto;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.message-card {
+  max-width: 80%;
+  flex: 1;
+  word-wrap: break-word;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.sent {
+  align-self: flex-end;
+   
+}
+
+.received {
+  align-self: flex-start;
   
-  .messages {
-    margin-bottom: 1rem;
-    max-height: 300px;
-    overflow-y: auto;
-    padding: 1rem;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
-  
-  .messages p {
-    margin: 0.5rem 0;
-    padding: 0.5rem;
-    background-color: #e0f7fa;
-    border-radius: 4px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  mat-form-field {
-    margin-bottom: 1rem;
-  }
-  
-  button {
-    align-self: flex-end;
-  }
+}
+
+.senderCard {
+  background-color: #dcf8c6; 
+}
+
+.receiverCard {
+  background-color: #fff; 
+}
+
+.message-time {
+  margin: 0;
+  left: 0;
+}
+
+.message-text {
+  margin: 0;
+}
+
+.message-info {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #555;
+  text-align: left;
+}
+
+.message-form {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: #fff;
+  border-top: 1px solid #ddd;
+}
+
+.message-input {
+  flex: 1;
+  margin-right: 1rem;
+}
+
+.receiver-input {
+  flex: 1;
+  margin-right: 1rem;
+}
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
